# market-order-app

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
configs/: default.yaml
data/samples/: sample_orderbook.jsonl
docker/: Dockerfile  docker-compose.yml
scripts/: capture_ws.py  run_replay.py
src/moa/: backtest.py  signals.py  ui_app.py
src/obp/: __init__.py  config.py  features.py  ingest.py  schemas.py  ui_app.py  utils.py
tests/: test_features.py  test_ingest.py
