[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "market-order-app"
version = "0.1.0"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
  "numpy>=1.26", "pandas>=2.0", "numba>=0.59",
  "websockets>=12.0", "pyyaml>=6.0", "streamlit>=1.36", "tqdm>=4.66"
]

[tool.setuptools.packages.find]
where = ["src"]
